add container default styles

--- a/examples/index.html
+++ b/examples/index.html
@@ -4,9 +4,9 @@
 </head>
 <body>
 	<div class="root">
-		<div id="normal" class="container normal">
+		<div id="normal" class="normal" style="width: 250px;">
 		</div>
-		<div id="container" class="container result">
+		<div id="container" class="result" style="width: 250px;">
 		</div>
 	</div>
 	<script src="./output/bundle.js" type="module"></script>
